--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2",
-    "currency.js": "^2.0.4"
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
