--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "undici": "^5.6.0",
+    "ws": "^8.8.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
