--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "undici": "^5.6.0",
     "ws": "^8.8.0"
   },
-  "devDependencies": {
-    "dotenv": "^16.0.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "node app.js"
   }
